--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bulma": "^0.8.2",
     "node-sass": "^4.14.1",
+    "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-bulma-components": "^3.2.0",
     "react-dom": "^16.13.1",
