--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "node-sass": "^4.14.1",
     "query-string": "^6.12.1",
     "react": "^16.13.1",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-bulma-components": "^3.2.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-scroll": "^1.7.16",
     "redux": "^4.0.5"
   },
   "scripts": {
